# bw-agent

./: Cargo.toml  README.md  config-sample.yaml  config.yaml.sample
.github/workflows/: build-deploy.yaml
src/: crypto.rs  main.rs  ssh_agent.rs  types.rs
src/types/: args.rs  bw_types.rs  config.rs  mod.rs  ssh_agent_types.rs
