[package]
name = "bw-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
base64 = "0.13"
openssl = "0.10"
bytes = "1.2"
byteorder = "1.4"
ssh-key = { version = "0.5", features = ["rsa", "encryption", "alloc"] }
clap = { version = "4.0.17", features = ["derive"] }
serde_yaml = "0.9"
rpassword = "7.0"
uuid = { version = "1.2", features = ["v4"] }
clap-serde-derive = "0.2"
ctap-hid-fido2 = "3.4"
ssh-agent-lib = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
