[package]
name = "bw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utils
thiserror = "1.0"
clap = { version = "4.0.17", features = ["derive"] }
log = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rpassword = "7.0"
uuid = { version = "1.2", features = ["v4"] }

# Crypto
rand = { version = "0.8", features = ["getrandom"] }
ring = "0.16"
openssl = "0.10"
ssh-key = { version = "0.5", features = ["rsa", "encryption", "alloc"] }
ssh-agent-lib = "0.2"
ctap-hid-fido2 = "3.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
